# swift-everywhere-toolchain

./: .gitignore  .markdownlint.json  .rubocop.yml  .tm_properties  Android-on-Swift.code-workspace  Automation.js  Automation.rb  CHANGELOG  CHANGELOG.md  LICENSE.txt  Makefile  NDK_VERSION  RELEASING.md  Rakefile  Readme.md  Swift On Linux.txt  Swift on Android.md  SwiftOnAndroid.code-workspace  Vagrantfile  developer.sh  local.properties.template.json  local.properties.yml.template  main.js
.troubleshooting/CrossCompile/: CrossCompile.rb
.troubleshooting/dispatch/: block.cpp.rb  libswiftDispatch.so.rb
.troubleshooting/foundation/: __BEGIN_DECLS.rb
.troubleshooting/llb/: stdarg.h.rb
.troubleshooting/stdlib/: glibc.swiftmodule.rb  libswiftRemoteMirror.rb
.troubleshooting/swift/: BackDeployment.cpp.rb  Immediate.cpp.rb  SwiftRT-ELF.cpp.rb
.unused/: android-destination.json  swiftc-arm-linux-androideabi
.unused/Builders/: FoundationBuilder.rb  ICUHostBuilder.rb  ICUSwiftHostBuilder.rb  OpenSSLBuilder.rb  SPMBuilder.rb  XMLBuilder.rb
.unused/Shell/: brew.sh
Assets/: Readme.md  android-copy-libs  android-swift-build  android-swift-copy-libs  android-swift.rb  android-swiftc  copy-libs-aarch64-linux-android  copy-libs-any-linux-android  copy-libs-arm-linux-androideabi  copy-libs-i686-linux-android  copy-libs-x86_64-linux-android  swift-build-aarch64-linux-android  swift-build-arm-linux-androideabi  swift-build-i686-linux-android  swift-build-x86_64-linux-android  swiftc-aarch64-linux-android  swiftc-any-linux-android  swiftc-arm-linux-androideabi  swiftc-i686-linux-android  swiftc-x86_64-linux-android
Downloads/: Readme.md
Patches/icu/: configure.patch
Patches/icu/source/config/: mh-linux.diff
Patches/llbuild/: CMakeLists.txt.diff
Patches/swift/: stdlib-private-CMakeLists.txt.patch  stdlib-public-stubs-CMakeLists.txt.patch
Patches/swift-corelibs-foundation/: CFRuntime.c.patch  CMakeLists.patch  CMakeLists.txt.diff  CmakeSystemProcessor.patch  CompileOptions.patch  CoreFoundation-CMakeLists.txt.patch  FileManager.patch  MissedLocaleHeaders.patch  NSGeometry.patch  Readme.txt  plutil.patch  uuid.h.patch
Patches/swift-corelibs-foundation/CoreFoundation/: CMakeLists.txt.diff
Patches/swift-corelibs-foundation/Foundation/: CGFloat.swift.diff  CMakeLists.txt.diff  Data.swift.diff  FileManager+POSIX.swift.diff  FileManager.swift.diff  NSObjCRuntime.swift.diff  NSURL.swift.diff
Patches/swift-corelibs-foundation/Sources/: CMakeLists.txt.diff
Patches/swift-corelibs-libdispatch/: CMakeLists.txt.diff  DisableWarningsAsErrors.patch
Patches/swift-corelibs-libdispatch/src/: CMakeLists.txt.diff
Patches/swift/stdlib/: CMakeLists.txt.diff
Patches/uuid/: CMakeLists.txt
Projects/: HelloExeBuilder.rb  HelloLibBuilder.rb  ProjectBuilder.rb
Projects/Hello/: hello.swift
Projects/Hello-Lib/: HelloMessage.swift
Projects/Hello-NDK/: Readme.md
Projects/Hello-NDK/app/: build.gradle
Projects/Hello-NDK/app/src/main/cpp/: CMakeLists.txt  Dummy.cpp  Exports.swift
Projects/SPM-Demo/: Package.swift  README.md
Projects/SPM-Demo/Tests/: LinuxMain.swift
Projects/SPM-Tool/: Package.swift  README.md
Projects/SPM-Tool/Tests/: LinuxMain.swift
Scripts/: ADBHelper.rb  AndroidBuilder.rb  Builder.rb  Config.rb  HelloProjectBuilder.rb  ICUBuilder.rb  SwiftBuilder.rb  Tool.rb  bootstrap.sh
Scripts/Builders/: AndroidBuilder.rb  CMarkBuilder.rb  ClangBuilder.rb  CompilerRTBuilder.rb  CurlBuilder.rb  DispatchBuilder.rb  FoundationBuilder.rb  HelloProjectBuilder.rb  ICUBaseBuilder.rb  ICUBuilder.rb  ICUHostBuilder.rb  ICUSwiftHostBuilder.rb  LLBBuilder.rb  LLVMBuilder.rb  OpenSSLBuilder.rb  SPMBuilder.rb  SwiftBuilder.rb  SwiftSPMBuilder.rb  UUIDBuilder.rb  XMLBuilder.rb
Scripts/Common/: ADB.rb  ADBHelper.rb  Arch.rb  Builder.rb  Checkout.rb  Config.rb  Downloader.rb  Lib.rb  Location.rb  NDK.rb  Revision.rb  Settings.rb  Tool.rb
Scripts/Shell/: bootstrap.sh  brew.sh  environment.sh  verify.sh
Sources/: .gitignore  Readme.md
Tests/: ADB.js  ProjectBuilder.js  ProjectBuilder.rb  TestAutomation.js  main.js
Tests/Scripts/: ADB.rb  ProjectBuilder.rb  Tool.rb
Tests/sample-exe/: Builder.js  Builder.rb  main.js
Tests/sample-exe/Sources/: main.swift
Tests/sample-lib/: Builder.js  Builder.rb
Tests/sample-lib/Sources/: main.swift
Tests/sample-library/: .gitignore  Builder.rb  Makefile
Tests/sample-library/Sources/: HelloMessage.swift
Tests/sample-package/: .gitignore  Builder.js  Builder.rb  Package.swift
Tests/sample-pkg/: .gitignore  Builder.js  Package.swift
Troubleshooting/: Troubleshooter.rb
Troubleshooting/CrossCompile/: CrossCompile.sh  Hello.swift
Troubleshooting/Tests/: swift-build.rb
Troubleshooting/dispatch/: libswiftDispatch.so.rb
Troubleshooting/foundation/: LIBC_PRIVATE.rb
Troubleshooting/swift/: Array.cpp.sh  Casting.cpp.rb  DarwinLink.rb  Glibc.o.rb  Invalid_Abbref_for_Record.rb  MetadataSource.cpp.rb  SwiftRT-ELF.cpp.rb  SwiftRT-ELF.cpp.sh
Unused/Builders/: CMarkBuilder.rb  CurlBuilder.rb  ICUBuilder.rb  LLVMBuilder.rb
Unused/Shell/: environment.sh
lib/: Archs.js  Builder.js  Components.js  Config.js  Folder.js  Installer.js  Location.js  NDK.js  Paths.js  Settings.js  Tool.js
lib/Archs/: Arch.js  Arm64Arch.js  ArmArch.js  HostArch.js  x86Arch.js  x86_64Arch.js
lib/Builders/: CMarkBuilder.js  CURLBuilder.js  DispatchBuilder.js  FoundationBuilder.js  ICUBaseBuilder.js  ICUBuilder.js  ICUHostBuilder.js  LLBBuilder.js  LLVMBuilder.js  SAPBuilder.js  SPMBuilder.js  SSLBuilder.js  SwiftBuilder.js  SwiftCryptoBuilder.js  SwiftDriverBuilder.js  SwiftStdLibBuilder.js  SwiftTSCBuilder.js  XMLBuilder.js  YAMSBuilder.js
lib/Components/: CMarkComponent.js  CURLComponent.js  Component.js  DispatchComponent.js  FoundationComponent.js  ICUCompoment.js  LLBComponent.js  LLVMComponent.js  SAPComponent.js  SPMComponent.js  SSLComponent.js  SwiftComponent.js  SwiftCryptoComponent.js  SwiftDriverComponent.js  SwiftStdLibComponent.js  SwiftTSCComponent.js  XMLComponent.js  YAMSComponent.js
lib/Git/: Checkout.js  Repo.js  Revision.js
(+94 files in other folders)
